--- a/src/WebUI/ClientApp/src/app/search-flights/search-flights.component.html
+++ b/src/WebUI/ClientApp/src/app/search-flights/search-flights.component.html
@@ -144,69 +144,74 @@
                 </div>
             </form>
         </div>
-        <div class="row">
+  
             <div class="col-md-12">
-                <table mat-table class="mat-elevation-z8" [dataSource]="dataSource">
+                <div class="row">
+                    <div class="spinner-container" *ngIf="dataSource.loading$ | async">
+                        <mat-spinner></mat-spinner>
+                    </div>
+                <mat-table   matSort matSortActive="price" matSortDirection="asc" matSortDisableClear 
+                mat-table class="mat-elevation-z8" [dataSource]="dataSource">
 
                     <ng-container matColumnDef="id">
-                        <th mat-header-cell *matHeaderCellDef>#</th>
+                        <th mat-header-cell *matHeaderCellDef mat-sort-header>#</th>
                         <td mat-cell *matCellDef="let flightOffer">{{flightOffer.id}}</td>
                     </ng-container>
                     <ng-container matColumnDef="departureAirport">
-                        <th mat-header-cell *matHeaderCellDef>Departure airport</th>
+                        <th mat-header-cell *matHeaderCellDef mat-sort-header>Departure airport</th>
                         <td mat-cell *matCellDef="let flightOffer">{{flightOffer.departureAirport}}</td>
                     </ng-container>
 
                     <ng-container matColumnDef="arrivalAirport">
-                        <th mat-header-cell *matHeaderCellDef>Arrival airport</th>
+                        <th mat-header-cell *matHeaderCellDef mat-sort-header>Arrival airport</th>
                         <td class="description-cell" mat-cell *matCellDef="let flightOffer">
                             {{flightOffer.arrivalAirport}}</td>
                     </ng-container>
 
                     <ng-container matColumnDef="dateOfDeparture">
-                        <th mat-header-cell *matHeaderCellDef>Date of departure</th>
+                        <th mat-header-cell *matHeaderCellDef mat-sort-header>Date of departure</th>
                         <td class="duration-cell" mat-cell *matCellDef="let flightOffer">{{flightOffer.dateOfDeparture | date: 'dd.MMM.yyyy HH:mm'}}
                         </td>
                     </ng-container>
 
                     <ng-container matColumnDef="dateOfArrival">
-                        <th mat-header-cell *matHeaderCellDef>Date of arrival</th>
+                        <th mat-header-cell *matHeaderCellDef mat-sort-header>Date of arrival</th>
                         <td class="duration-cell" mat-cell *matCellDef="let flightOffer">{{flightOffer.dateOfArrival | date: 'dd.MMM.yyyy HH:mm'}}
                         </td>
                     </ng-container>
                     <ng-container matColumnDef="numberOfItinerariesArrival">
-                        <th mat-header-cell *matHeaderCellDef>Number of itineraries arrival</th>
+                        <th mat-header-cell *matHeaderCellDef mat-sort-header>Number of itineraries arrival</th>
                         <td class="duration-cell" mat-cell *matCellDef="let flightOffer">
                             {{flightOffer.numberOfItinerariesArrival}}</td>
                     </ng-container>
 
                     <ng-container matColumnDef="numberOfItinerariesDeparture">
-                        <th mat-header-cell *matHeaderCellDef>Number of itineraries departure</th>
+                        <th mat-header-cell *matHeaderCellDef mat-sort-header>Number of itineraries departure</th>
                         <td class="duration-cell" mat-cell *matCellDef="let flightOffer">
                             {{flightOffer.numberOfItinerariesDeparture}}</td>
                     </ng-container>
 
                     <ng-container matColumnDef="numberOfAdults">
-                        <th mat-header-cell *matHeaderCellDef>Number of adults</th>
+                        <th mat-header-cell *matHeaderCellDef mat-sort-header>Number of adults</th>
                         <td class="duration-cell" mat-cell *matCellDef="let flightOffer">{{flightOffer.numberOfAdults}}
                         </td>
                     </ng-container>
                     <ng-container matColumnDef="numberOfChildren">
-                        <th mat-header-cell *matHeaderCellDef>Number of children</th>
+                        <th mat-header-cell *matHeaderCellDef mat-sort-header>Number of children</th>
                         <td class="duration-cell" mat-cell *matCellDef="let flightOffer">
                             {{flightOffer.numberOfChildren}}</td>
                     </ng-container>
                     <ng-container matColumnDef="numberOfInfants">
-                        <th mat-header-cell *matHeaderCellDef>Number of infants</th>
+                        <th mat-header-cell *matHeaderCellDef mat-sort-header>Number of infants</th>
                         <td class="duration-cell" mat-cell *matCellDef="let flightOffer">{{flightOffer.numberOfInfants}}
                         </td>
                     </ng-container>
                     <ng-container matColumnDef="price">
-                        <th mat-header-cell *matHeaderCellDef>Price</th>
+                        <th mat-header-cell *matHeaderCellDef mat-sort-header>Price</th>
                         <td class="duration-cell" mat-cell *matCellDef="let flightOffer">{{flightOffer.price}}</td>
                     </ng-container>
                     <ng-container matColumnDef="currency">
-                        <th mat-header-cell *matHeaderCellDef>Currency</th>
+                        <th mat-header-cell *matHeaderCellDef mat-sort-header>Currency</th>
                         <td class="duration-cell" mat-cell *matCellDef="let flightOffer">{{flightOffer.currency}}</td>
                     </ng-container>
 
@@ -214,7 +219,9 @@
                     <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
 
 
-                </table>
+                </mat-table>
+                <mat-paginator [length]="this.dataSource.totalCount" [pageSize]="5"
+                [pageSizeOptions]="[3, 5, 10]"></mat-paginator>
             </div>
         </div>
     </mat-card-content>
